--- a/style.css
+++ b/style.css
@@ -610,7 +610,7 @@ p {
 }
 
 .img-explore {
-    background-image: url("./images/explore.jpeg");
+    background-image: url("./images/explore.jpg");
 }
 
 .img-publish {
