--- a/style.css
+++ b/style.css
@@ -1,10 +1,15 @@
 /*----- Global Elements -----*/
-
 html,
 body {
     height: 100%;
     margin: 0px;
-    font-family: 'Raleway', sans-serif;
+    /*font-family: 'Raleway', sans-serif;*/
+    
+}
+
+h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
+    font-style: normal;
+    font-family: "Gotham A", "Gotham B", "M Hei PRC W45", "M Hei HK W42", "M Hei HK W40", "HelveticaNeue-Regular", "Helvetica Neue Regular", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 body {
@@ -19,38 +24,38 @@ h5,
 h6 {
     margin-top: 0;
     margin-bottom: 2rem;
-    font-weight: 300;
+    font-weight: 200;
     border-bottom: 0;
 }
 
 h1 {
     font-size: 4.0rem;
     line-height: 1.2;
-    letter-spacing: -.1rem;
+    letter-spacing: .03rem;
 }
 
 h2 {
     font-size: 3.6rem;
     line-height: 1.25;
-    letter-spacing: -.1rem;
+    letter-spacing: .1rem;
 }
 
 h3 {
     font-size: 3.0rem;
     line-height: 1.3;
-    letter-spacing: -.1rem;
+    letter-spacing: .1rem;
 }
 
 h4 {
     font-size: 2.4rem;
     line-height: 1.35;
-    letter-spacing: -.08rem;
+    letter-spacing: .1rem;
 }
 
 h5 {
     font-size: 1.8rem;
     line-height: 1.5;
-    letter-spacing: -.05rem;
+    letter-spacing: .05rem;
 }
 
 h6 {
@@ -61,8 +66,8 @@ h6 {
 
 p {
     font-size: 1.1rem;
-    line-height: 1.5;
-    font-weight: 300
+    line-height: 1.4;
+    font-weight: 100;
 }
 
 .text-center {
@@ -388,7 +393,8 @@ p {
         background-size: cover;
         background-repeat: no-repeat;
         width: 100%;
-        padding-top: 40px;
+        padding-top: 70px;
+        padding-bottom: 50px;
         text-align: center;
         color: #fff;
         box-shadow: inset 0px -88px 61px -33px rgba(0, 0, 0, 0.41);
@@ -805,7 +811,7 @@ p {
 /* menu responsive horizontal */
 
 .custom-menu-wrapper {
-    background-color: rgba(0, 0, 0, 0.8);
+    background-color: rgba(0, 0, 0, 0.5);
     white-space: nowrap;
     position: fixed;
     width: 100%;
