--- a/style.css
+++ b/style.css
@@ -74,10 +74,12 @@ h6 {
     font-weight: 300;
     line-height: 1em;
     letter-spacing: 0;
-    margin-top:1.4em;
+    margin-top: 1.4em;
 }
 
-p, ul, li {
+p,
+ul,
+li {
     font-size: 1.1rem;
     line-height: 1.4;
     font-weight: 100;
@@ -370,13 +372,6 @@ p, ul, li {
         padding: 10% 5% 15%;
         text-align: center;
     }
-    .text-block-2 {
-        padding: 5% 0 0;
-        text-align: left;
-    }
-    .text-block-2 h4:not(:first-child) {
-        margin-top: 1.5em;
-    }
 }
 
 
@@ -626,12 +621,20 @@ p, ul, li {
         padding: 5% 25% 3%;
         text-align: center;
     }
-    .text-block-2 {
-        padding: 5% 0 0;
-        text-align: left;
+    .margin-20-right {
+        margin-right: 20px;
     }
-    .text-block-2 h4:not(:first-child) {
-        margin-top: 1.5em;
+    .pure-menu-horizontal li a {
+        border-bottom: 2px solid rgba(0, 0, 0, 0);
+        padding-left: 2px;
+        padding-right: 2px;
+        margin: auto 12px;
+    }
+    .pure-menu-horizontal li.active a,
+    .pure-menu-horizontal li:hover a {
+        /* a little extra padding for this style to allow for scrollbars */
+        border-bottom: 2px solid #5cc3f6;
+        color: #5cc3f6!important;
     }
 }
 
@@ -651,7 +654,7 @@ p, ul, li {
 }
 
 .img-j1 {
-    background-image: url("./images/softwaredesign.jpg");
+    background-image: url("./images/phone1.jpg");
 }
 
 .img-j2 {
@@ -737,6 +740,13 @@ p, ul, li {
 .footer-strikethrough {
     text-decoration: line-through;
     color: #e0e0e0;
+}
+.text-block-2 {
+    padding-top: 3%;
+    text-align: left;
+}
+.text-block-2 h4:not(:first-child) {
+    margin-top: 1.5em;
 }
 
 
@@ -847,16 +857,14 @@ p, ul, li {
 }
 
 .pure-menu-horizontal li a {
-    border-bottom: 2px solid rgba(0, 0, 0, 0);
-    padding-left: 2px;
-    padding-right: 2px;
+    padding-left: 4px;
+    padding-right: 6px;
     margin: auto 12px;
 }
 
 .pure-menu-horizontal li.active a,
 .pure-menu-horizontal li:hover a {
     /* a little extra padding for this style to allow for scrollbars */
-    border-bottom: 2px solid #5cc3f6;
     color: #5cc3f6!important;
 }
 
@@ -908,6 +916,7 @@ p, ul, li {
     top: 3px;
     right: 0;
     display: none;
+    cursor: pointer;
 }
 
 .custom-menu-toggle .bar {
