fixed image progression for jpeg

--- a/style.css
+++ b/style.css
@@ -658,11 +658,11 @@ li {
 }
 
 .img-j2 {
-    background-image: url("./images/type-keyboard.jpeg");
+    background-image: url("./images/type-keyboard.jpg");
 }
 
 .img-j3 {
-    background-image: url("./images/mountain.jpeg");
+    background-image: url("./images/mountain.jpg");
 }
 
 .img-watson {
