--- a/style.css
+++ b/style.css
@@ -5,8 +5,7 @@ body {
     height: 100%;
     margin: 0px;
     /*font-family: 'Raleway', sans-serif;*/
-        background-color: #111;
-
+    background-color: #111;
 }
 
 h1,
@@ -319,9 +318,17 @@ li {
     .album-image-title {
         display: none;
     }
+    .section-2 {
+        padding: 1em 2em 5em;
+        background-color: #f8f8f8;
+    }
+    .section-3 {
+        padding: 2em 2em 5em;
+        background-color: #f8f8f8;
+    }
     /*----- card design -----*/
     .card {
-        border-radius: 4px;
+        border-radius: 19px;
         padding: 0;
         box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1), 0 8px 16px rgba(0, 0, 0, 0.05);
         -webkit-transition: all .3s ease;
@@ -329,7 +336,6 @@ li {
         display: block;
         color: #333;
         margin: 20px auto;
-        width: 75%;
         text-decoration: none;
     }
     .card:hover {
@@ -343,14 +349,14 @@ li {
         background-size: cover;
         background-position: center;
         margin: 0;
-        border-radius: 4px 4px 0 0;
+        border-radius: 19px 19px 0 0;
         box-shadow: inset 0px -88px 61px -33px rgba(0, 0, 0, 0.31);
     }
     .card-info {
         background-color: #fafafa;
         text-align: center;
         padding: 25px 25px 15px;
-        border-radius: 0 0 4px 4px;
+        border-radius: 0 0 19px 19px;
     }
     .card-title {
         font-family: futura-pt, sans-serif;
@@ -370,8 +376,7 @@ li {
         padding: 10% 5% 15%;
         text-align: center;
     }
-    
-    .text-block-1 {
+    .text-block-3 {
         padding: 10% 5% 15%;
         text-align: left;
     }
@@ -573,9 +578,17 @@ li {
     .album-art:hover .album-image-title {
         opacity: 0;
     }
+    .section-2 {
+        padding: 1em 5em 5em;
+        background-color: #f8f8f8;
+    }
+    .section-3 {
+        padding: 2em 6em 5em;
+        background-color: #f8f8f8;
+    }
     /*----- card design -----*/
     .card {
-        border-radius: 4px;
+        border-radius: 19px;
         padding: 0;
         box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1), 0 8px 16px rgba(0, 0, 0, 0.05);
         -webkit-transition: all .3s ease;
@@ -597,14 +610,14 @@ li {
         background-size: cover;
         background-position: center;
         margin: 0;
-        border-radius: 4px 4px 0 0;
+        border-radius: 19px 19px 0 0;
         box-shadow: inset 0px -88px 61px -33px rgba(0, 0, 0, 0.31);
     }
     .card-info {
         background-color: #fafafa;
         text-align: center;
         padding: 25px 25px 35px;
-        border-radius: 0 0 4px 4px;
+        border-radius: 0 0 19px 19px;
     }
     .card-title {
         font-family: futura-pt, sans-serif;
@@ -621,11 +634,10 @@ li {
         color: #08c;
     }
     .text-block-1 {
-        padding: 2% 20% 1%;
+        padding: 5% 20% 2%;
         text-align: center;
     }
-    
-     .text-block-3 {
+    .text-block-3 {
         padding: 2% 20% 0;
         text-align: left;
     }
@@ -673,6 +685,14 @@ li {
     background-image: url("./images/mountain.jpg");
 }
 
+.img-j4 {
+    background-image: url("./images/build_banner.jpg");
+}
+
+.img-j5 {
+    background-image: url("./images/share_banner.jpg");
+}
+
 .img-watson {
     background-image: url("./images/app_watson.jpg");
 }
@@ -713,13 +733,14 @@ li {
 .img-plasticity {
     background-image: url("./images/app_plasticity_2.png");
     background-size: contain;
-    background-repeat:no-repeat;
+    background-repeat: no-repeat;
     background-color: #f04f55;
 }
 
 .img-plasticity-2 {
     background-image: url("./images/app_plasticity.jpeg");
 }
+
 
 /*----- optional css -----*/
 
@@ -745,24 +766,16 @@ li {
     transform: scale(1.4)!important;
 }
 
-.section-2 {
-    padding: 1em 5em 5em;
-    background-color: #f8f8f8;
-}
-
-.section-3 {
-    padding: 2em 6em 5em;
-    background-color: #f8f8f8;
-}
-
 .footer-strikethrough {
     text-decoration: line-through;
     color: #e0e0e0;
 }
+
 .text-block-2 {
     padding-top: 3%;
     text-align: left;
 }
+
 .text-block-2 h4:not(:first-child) {
     margin-top: 1.5em;
 }
@@ -1321,4 +1334,6 @@ li {
     color: #777;
 }
 
-hr.subtle{border:1px dotted #ccc;}
+hr.subtle {
+    border: 1px dotted #ccc;
+}
