--- a/style.css
+++ b/style.css
@@ -1363,18 +1363,72 @@ li {
 hr.subtle {
     border: 1px dotted #ccc;
 }
+
 .add-new {
     text-align: center;
-    padding:10% 0;
-    color:#ccc;
-    border:2px dotted #ccc;
-    transition:all .25s ease-in;
+    padding: 10% 0;
+    color: #ccc;
+    border: 2px dotted #ccc;
+    -webkit-transition: all .25s ease-in;
+    transition: all .25s ease-in;
     box-shadow: none;
-
 }
 
 .add-new:hover {
-    color:#aaa;
-            box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1), 0 12px 22px rgba(0, 0, 0, 0.15);
+    color: #aaa;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1), 0 12px 22px rgba(0, 0, 0, 0.15);
+}
 
+
+/* secondary nav css */
+
+@media screen and (max-width: 767px) {
+    ul.list-inline li {
+        display: inline-block;
+        margin-right: 15px;
+    }
+    ul.list-inline li a {
+        text-decoration: none;
+        color: #333;
+        -webkit-transition: all .1s ease-in;
+        transition: all .1s ease-in;
+    }
+    ul.list-inline li a:hover {
+        color: #5cc3f6;
+    }
+    .nav-secondary {
+        position: fixed;
+        margin-top: 50px;
+        background-color: rgba(255,255,255,.9);
+        width: 100%;
+        padding: 0 15px;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    ul.list-inline li {
+        display: inline-block;
+        margin-right: 25px;
+    }
+    ul.list-inline li a {
+        text-decoration: none;
+        color: #333;
+        -webkit-transition: all .1s ease-in;
+        transition: all .1s ease-in;
+        font-size: 16px;
+        font-weight:400;
+    }
+    ul.list-inline li a:hover {
+        color: #5cc3f6;
+    }
+    .nav-secondary {
+        position: fixed;
+        margin-top: 60px;
+        background-color: rgba(255,255,255,.9);
+        width: 100%;
+        padding: 0 30px;
+    }
+}
+.j1-secondary {
+    padding-top:210px;
 }
