--- a/style.css
+++ b/style.css
@@ -893,8 +893,7 @@ li {
     background-color: #5cc3f6;
     border: none;
     border-radius: 4rem;
-    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
-}
+box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);}
 
 .pure-button-blue:before {
     content: "";
