--- a/style.css
+++ b/style.css
@@ -1396,6 +1396,7 @@ hr.subtle {
     background-color: rgba(245, 245, 245, .8);
     z-index: 3;
     border-bottom: 1px solid rgba(0,0,0,.1);
+
 }
 
 .nav-secondary a {
@@ -1461,7 +1462,9 @@ hr.subtle {
     }
     .nav-secondary {
         margin-top: 60px;
-        padding: 0 30px;
+    }
+    .nav-secondary .pure-g {
+        margin-left:15px;
     }
     .nav-secondary-scrolled {
         position: fixed;
