--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
     /*font-family: 'Raleway', sans-serif;*/
     background-color: #111;
     overflow-x:hidden;
+    -ms-overflow-x:hidden;
 }
 
 h1,
