--- a/style.css
+++ b/style.css
@@ -893,7 +893,8 @@ li {
     background-color: #5cc3f6;
     border: none;
     border-radius: 4rem;
-box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);}
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+}
 
 .pure-button-blue:before {
     content: "";
@@ -1017,7 +1018,7 @@ box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);}
     -webkit-transition: all 0.5s;
     transition: all 0.5s;
     height: 3em;
-    width: 70em;
+    /*width: 70em;*/
     position: absolute;
     top: 0;
     z-index: -1;
@@ -1069,7 +1070,7 @@ box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);}
     }
     .pure-menu-horizontal.custom-menu-tucked {
         z-index: -1;
-        top: 45px;
+        top: 88px;
         position: absolute;
         overflow: hidden;
     }
@@ -1394,9 +1395,7 @@ hr.subtle {
     position: absolute;
     width: 100%;
     background-color: rgba(245, 245, 245, .8);
-    z-index: 3;
-    border-bottom: 1px solid rgba(0,0,0,.1);
-
+    border-bottom: 1px solid rgba(0, 0, 0, .1);
 }
 
 .nav-secondary a {
@@ -1429,7 +1428,8 @@ hr.subtle {
     }
     .nav-secondary {
         margin-top: 48px;
-        padding:0;
+        padding: 0;
+        z-index: 3;
     }
     .nav-secondary-scrolled {
         position: fixed;
@@ -1441,6 +1441,16 @@ hr.subtle {
     }
     .hidden-xs {
         display: none;
+    }
+    .custom-menu-screen {
+        background-color: rgba(0, 0, 0, 0.7);
+        -webkit-transition: all 0.5s;
+        transition: all 0.5s;
+        height: 3em;
+        width: 70em;
+        position: absolute;
+        top: 0;
+        z-index: -1;
     }
 }
 
@@ -1464,7 +1474,7 @@ hr.subtle {
         margin-top: 60px;
     }
     .nav-secondary .pure-g {
-        margin-left:15px;
+        margin-left: 15px;
     }
     .nav-secondary-scrolled {
         position: fixed;
@@ -1479,14 +1489,15 @@ hr.subtle {
 .j1-secondary {
     padding-top: 210px;
 }
+
 .free-app {
-    color:red;
-    background-color:  deepskyblue;
-    color:#fff;
-    z-index:2;
+    color: red;
+    background-color: deepskyblue;
+    color: #fff;
+    z-index: 2;
     text-align: center;
-    position:relative;
-    padding:5px;
-    top:-25px;
-    margin-bottom:-25px;
+    position: relative;
+    padding: 5px;
+    top: -25px;
+    margin-bottom: -25px;
 }
