--- a/style-light.css
+++ b/style-light.css
@@ -102,7 +102,7 @@ li {
 .img-data1 {
     background-image: url("./images/data.jpg");
     position: center;
-    box-shadow: inset 0 -300px 2500px rgba(15, 50, 60, 0.4);
+    box-shadow: inset 0 -400px 1000px rgba(45, 70, 95, 0.5);
     background-position: 0 20%;
     height:90vh;
 }
@@ -110,10 +110,10 @@ li {
         padding: 5% 15%;
         text-align: center;
     }
-.text-block-2 {
+.text-block-2{
     padding: 5%;
     text-align: left;
-    max-width:700px
+    max-width:700px;
 }
 
 .text-dark {
@@ -141,3 +141,8 @@ li {
         color: #222;
         height: 100%;
     }
+.jumbotron-light-text {
+            text-shadow:0 1px 7px rgba(0,0,0,0.5);
+}
+
+
